...
    <string name="title_activity_pointofinterest">PointOfInterestActivity</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>

    <string name="splash_header_text">Tourable</string>

    <string name="preference_file_key">com.hobbyte.touringandroid.PREF_FILE_KEY</string>
    <string name="prefs_is_new_install">KEY_FRESH</string>
    <string name="prefs_current_tour">CURRENT_TOUR_ID</string>
    <string name="prefs_current_key">CURRENT_KEY_ID</string>
    <string name="prefs_current_expiry">CURRENT_KEY_EXPIRATION</string>
    <string name="prefs_tours_to_update">TO_UPDATE</string>

    <string name="start_activity_your_tours">Your Tours</string>
    <string name="start_activity_enter_key">Enter the provided tour key:</string>
...
