...
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/previousToursLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/addTourButton"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/toolbarStart"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="32dp">

...
